--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+@font-face {
+  font-family: sa;
+  src: url("./63cffc20aa8997095067596f_Satoshi-Light.woff");
+}
+@font-face {
+  font-family: ch;
+  src: url("./63cffc0a3942456e003bc265_Chillax-Regular.woff");
+}
+@font-face {
+  font-family: lo;
+  src: url("./L0x5DF4xlVMF-BfR8bXMIjhLq38.woff2");
+}
 * {
   margin: 0;
   padding: 0;
@@ -90,6 +102,83 @@ main section .bottom .text h3 span {
   border-radius: 2rem;
   padding: 0.6rem 0.8rem;
 }
+main .users {
+  flex-wrap: wrap;
+  padding: 2rem 4rem;
+  color: white;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+  justify-content: space-between;
+}
+main .users .clients {
+  display: flex;
+  flex-direction: column;
+  gap: 0rem;
+  align-items: center;
+}
+main .users .clients h6 {
+  font-family: lo;
+  padding: 0rem 0.5rem;
+  text-transform: uppercase;
+  font-size: 1rem;
+  opacity: 0.5;
+}
+main .users .clients p {
+  font-family: ch;
+  font-size: 3.5rem;
+}
+main .users .project {
+  display: flex;
+  flex-direction: column;
+  gap: 0rem;
+  align-items: center;
+}
+main .users .project h6 {
+  padding: 0rem 0.5rem;
+  text-transform: uppercase;
+  font-family: lo;
+  font-size: 1rem;
+  opacity: 0.5;
+}
+main .users .project p {
+  font-family: ch;
+  font-size: 3.5rem;
+}
+main .users .happy {
+  display: flex;
+  flex-direction: column;
+  gap: 0rem;
+  align-items: center;
+}
+main .users .happy h6 {
+  font-family: lo;
+  text-transform: uppercase;
+  font-size: 1rem;
+  opacity: 0.5;
+}
+main .users .happy p {
+  font-family: ch;
+  font-size: 3.5rem;
+}
+main .users .follower {
+  display: flex;
+  flex-direction: column;
+  gap: 0rem;
+  align-items: center;
+}
+main .users .follower h6 {
+  padding: 0rem 0.5rem;
+  font-family: lo;
+  text-transform: uppercase;
+  font-size: 1rem;
+  opacity: 0.5;
+}
+main .users .follower p {
+  font-family: ch;
+  font-size: 3.5rem;
+}
 
 @media (min-width: 900px) {
   main section {
@@ -98,6 +187,11 @@ main section .bottom .text h3 span {
   main section .top,
   main section .bottom {
     width: 50%;
+  }
+  main section .top img {
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   main section .bottom {
     justify-content: space-between;
@@ -121,5 +215,38 @@ main section .bottom .text h3 span {
     line-height: 1.5;
     width: 90%;
     font-size: 1.7rem;
+  }
+  main .users {
+    display: flex;
+    flex-direction: row;
+    padding: 3rem 5rem;
+  }
+  main .users .clients h6 {
+    padding: 0rem;
+    font-weight: 300;
+  }
+  main .users .clients p {
+    font-size: 5.5rem;
+  }
+  main .users .project h6 {
+    padding: 0rem;
+    font-weight: 300;
+  }
+  main .users .project p {
+    font-size: 5.5rem;
+  }
+  main .users .happy h6 {
+    padding: 0rem;
+    font-weight: 300;
+  }
+  main .users .happy p {
+    font-size: 5.5rem;
+  }
+  main .users .follower h6 {
+    padding: 0rem;
+    font-weight: 300;
+  }
+  main .users .follower p {
+    font-size: 5.5rem;
   }
 }/*# sourceMappingURL=style.css.map */
