--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,18 @@
+@font-face {
+  font-family: sa;
+  src: url("./63cffc20aa8997095067596f_Satoshi-Light.woff");
+}
+
+@font-face {
+  font-family: ch;
+  src: url("./63cffc0a3942456e003bc265_Chillax-Regular.woff");
+}
+
+@font-face {
+  font-family: lo;
+  src: url("./L0x5DF4xlVMF-BfR8bXMIjhLq38.woff2");
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -27,7 +42,6 @@ section {
 
 main {
   @include flex-column(0rem);
-
   width: 100%;
   align-items: center;
 
@@ -90,6 +104,80 @@ main {
       }
     }
   }
+  .users {
+    flex-wrap: wrap;
+    padding: 2rem 4rem;
+    color: white;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    justify-content: space-between;
+
+    .clients {
+      @include flex-column(0rem);
+      align-items: center;
+      h6 {
+        font-family: lo;
+        padding: 0rem 0.5rem;
+        text-transform: uppercase;
+        font-size: 1rem;
+        opacity: 0.5;
+      }
+      p {
+        font-family: ch;
+        font-size: 3.5rem;
+      }
+    }
+    .project {
+      // width: 40%;
+
+      @include flex-column(0rem);
+      align-items: center;
+      h6 {
+        padding: 0rem 0.5rem;
+        text-transform: uppercase;
+        font-family: lo;
+        font-size: 1rem;
+        opacity: 0.5;
+      }
+      p {
+        font-family: ch;
+        font-size: 3.5rem;
+      }
+    }
+    .happy {
+      // width: 40%;
+
+      @include flex-column(0rem);
+      align-items: center;
+      h6 {
+        font-family: lo;
+        text-transform: uppercase;
+        font-size: 1rem;
+        opacity: 0.5;
+      }
+      p {
+        font-family: ch;
+        font-size: 3.5rem;
+      }
+    }
+    .follower {
+      @include flex-column(0rem);
+      align-items: center;
+      h6 {
+        padding: 0rem 0.5rem;
+        font-family: lo;
+        text-transform: uppercase;
+        font-size: 1rem;
+        opacity: 0.5;
+      }
+      p {
+        font-family: ch;
+        font-size: 3.5rem;
+      }
+    }
+  }
 }
 
 @media (min-width: 900px) {
@@ -99,6 +187,12 @@ main {
       .top,
       .bottom {
         width: 50%;
+      }
+      .top {
+        img {
+          height: 100%;
+          object-fit: cover;
+        }
       }
       .bottom {
         justify-content: space-between;
@@ -124,5 +218,47 @@ main {
         }
       }
     }
+    .users {
+      display: flex;
+      flex-direction: row;
+      padding: 3rem 5rem;
+      .clients {
+        h6 {
+          padding: 0rem;
+          font-weight: 300;
+        }
+        p {
+          font-size: 5.5rem;
+        }
+      }
+      .project {
+        h6 {
+          padding: 0rem;
+          font-weight: 300;
+        }
+        p {
+          font-size: 5.5rem;
+        }
+      }
+      .happy {
+        h6 {
+          padding: 0rem;
+          font-weight: 300;
+        }
+        p {
+          font-size: 5.5rem;
+        }
+      }
+      .follower {
+        h6 {
+          padding: 0rem;
+          font-weight: 300;
+        }
+        p {
+          font-size: 5.5rem;
+        }
+      }
+    }
+    
   }
 }
