--- a/style.css
+++ b/style.css
@@ -23,11 +23,12 @@ body {
 }
 
 body {
-  background-color: rgb(39, 38, 38);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: #1d1d1d;
 }
 
 html {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: rgb(244, 244, 244);
   font-size: clamp(14px, 1vw, 18px);
 }
 
@@ -42,57 +43,55 @@ main {
   width: 100%;
   align-items: center;
 }
-main section {
+main section.view1 {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   padding: 1rem;
 }
-main section .top {
+main section.view1 .top {
   width: 100%;
 }
-main section .top img {
+main section.view1 .top img {
   width: 100%;
-  border-radius: 10px;
+  border-radius: 0.7rem;
 }
-main section .bottom {
-  color: white;
+main section.view1 .bottom {
   padding: 2rem 2rem;
   border-radius: 0.7rem;
   display: flex;
   flex-direction: column;
   gap: 3rem;
-  background-color: #1e1e1e;
+  background-color: #2a2a2a;
 }
-main section .bottom p {
+main section.view1 .bottom p {
   font-size: 0.7rem;
   font-weight: 700;
 }
-main section .bottom .text {
+main section.view1 .bottom .text {
   display: flex;
   flex-direction: column;
   gap: 1.3rem;
-  width: 100%;
 }
-main section .bottom .text h1 {
+main section.view1 .bottom .text h1 {
   text-transform: uppercase;
   line-height: 1.1;
   font-size: 4rem;
   font-weight: 400;
 }
-main section .bottom .text p {
+main section.view1 .bottom .text p {
   font-size: 1.4rem;
   opacity: 0.5;
   font-weight: 200;
 }
-main section .bottom .text h3 {
+main section.view1 .bottom .text h3 {
   margin-top: 1rem;
   font-size: 0.8rem;
   font-weight: 600;
   text-transform: uppercase;
 }
-main section .bottom .text h3 span {
+main section.view1 .bottom .text h3 span {
   font-size: 1rem;
   border: 1px solid white;
   outline: none;
@@ -102,151 +101,147 @@ main section .bottom .text h3 span {
   border-radius: 2rem;
   padding: 0.6rem 0.8rem;
 }
-main .users {
-  flex-wrap: wrap;
-  padding: 2rem 2rem;
-  color: white;
+main section.view2 {
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+  width: 100%;
+  padding: 1rem;
+}
+main section.view2 .top,
+main section.view2 .bottom {
   width: 100%;
   display: flex;
-  flex-direction: row;
-  gap: 40px;
-  justify-content: space-between;
+  justify-content: space-around;
 }
-main .users .clients {
+main section.view2 .top .element,
+main section.view2 .bottom .element {
+  text-align: center;
   display: flex;
   flex-direction: column;
-  gap: 0rem;
-  align-items: center;
+  gap: 0.2rem;
 }
-main .users .clients h6 {
-  font-family: lo;
-  padding: 0rem 0.5rem;
-  text-transform: uppercase;
-  font-size: 1rem;
-  opacity: 0.5;
-}
-main .users .clients p {
+main section.view2 .top .element h2,
+main section.view2 .bottom .element h2 {
   font-family: ch;
   font-size: 3.5rem;
+  font-weight: 300;
 }
-main .users .project {
+main section.view2 .top .element small,
+main section.view2 .bottom .element small {
+  opacity: 0.5;
+  text-transform: uppercase;
+  font-size: 1rem;
+  font-family: sa;
+}
+main section.view3 {
   display: flex;
   flex-direction: column;
-  gap: 0rem;
-  align-items: center;
+  gap: 1rem;
+  width: 100%;
+  padding: 1rem;
 }
-main .users .project h6 {
-  padding: 0rem 0.5rem;
-  text-transform: uppercase;
-  font-family: lo;
-  font-size: 1rem;
-  opacity: 0.5;
+main section.view3 .top {
+  width: 100%;
 }
-main .users .project p {
-  font-family: ch;
-  font-size: 3.5rem;
+main section.view3 .top img {
+  width: 100%;
+  border-radius: 0.7rem;
 }
-main .users .happy {
+main section.view3 .bottom {
+  padding: 2rem 3rem;
+  border-radius: 0.7rem;
   display: flex;
   flex-direction: column;
-  gap: 0rem;
-  align-items: center;
+  gap: 3rem;
+  background-color: #2a2a2a;
 }
-main .users .happy h6 {
-  font-family: lo;
-  text-transform: uppercase;
+main section.view3 .bottom > p {
   font-size: 1rem;
-  opacity: 0.5;
+  text-transform: uppercase;
+  font-weight: 700;
 }
-main .users .happy p {
-  font-family: ch;
-  font-size: 3.5rem;
-}
-main .users .follower {
+main section.view3 .bottom .text {
   display: flex;
   flex-direction: column;
-  gap: 0rem;
-  align-items: center;
+  gap: 1rem;
 }
-main .users .follower h6 {
-  padding: 0rem 0.5rem;
-  font-family: lo;
+main section.view3 .bottom .text h1 {
   text-transform: uppercase;
-  font-size: 1rem;
-  opacity: 0.5;
+  font-size: 4rem;
+  font-weight: 400;
 }
-main .users .follower p {
-  font-family: ch;
-  font-size: 3.5rem;
+main section.view3 .bottom .text p {
+  font-size: 1.2rem;
+  opacity: 0.5;
+  font-weight: 200;
 }
 
 @media (min-width: 900px) {
-  main section {
+  main section.view1 {
     flex-direction: row;
+    padding: 1rem 4rem;
   }
-  main section .top,
-  main section .bottom {
+  main section.view1 .top,
+  main section.view1 .bottom {
     width: 50%;
   }
-  main section .top img {
+  main section.view1 .top img {
     height: 100%;
     -o-object-fit: cover;
        object-fit: cover;
   }
-  main section .bottom {
+  main section.view1 .bottom {
     justify-content: space-between;
-    padding: 3rem 3.7rem;
+    padding: 3rem;
   }
-  main section .bottom p {
-    font-weight: 450;
+  main section.view1 .bottom > p {
+    font-weight: 650;
+    font-size: 1rem;
   }
-  main section .bottom .text {
-    display: flex;
-    flex-direction: column;
+  main section.view1 .bottom .text {
     gap: 1.5rem;
   }
-  main section .bottom .text h1 {
+  main section.view1 .bottom .text h1 {
     width: 80%;
     font-weight: 370;
     font-size: 4.5rem;
     line-height: 1.1;
   }
-  main section .bottom .text p {
-    line-height: 1.5;
+  main section.view1 .bottom .text p {
+    line-height: 1.2;
     width: 90%;
-    font-size: 1.7rem;
+    font-weight: 300;
+    font-size: 1.5rem;
   }
-  main .users {
-    display: flex;
+  main section.view2 {
     flex-direction: row;
-    padding: 3rem 5rem;
+    padding: 3rem 4rem;
   }
-  main .users .clients h6 {
-    padding: 0rem;
-    font-weight: 300;
+  main section.view2 .top .element h2,
+  main section.view2 .bottom .element h2 {
+    font-size: 4.5rem;
   }
-  main .users .clients p {
-    font-size: 5.5rem;
+  main section.view3 {
+    flex-direction: row-reverse;
   }
-  main .users .project h6 {
-    padding: 0rem;
-    font-weight: 300;
+  main section.view3 .top,
+  main section.view3 .bottom {
+    width: 50%;
   }
-  main .users .project p {
-    font-size: 5.5rem;
+  main section.view3 .bottom {
+    justify-content: space-between;
+    padding: 3rem;
   }
-  main .users .happy h6 {
-    padding: 0rem;
-    font-weight: 300;
+  main section.view3 .bottom h1 {
+    width: 80%;
   }
-  main .users .happy p {
-    font-size: 5.5rem;
+  main section.view3 .bottom .paragraph {
+    width: 100%;
+    display: flex;
+    gap: 2rem;
   }
-  main .users .follower h6 {
-    padding: 0rem;
-    font-weight: 300;
-  }
-  main .users .follower p {
-    font-size: 5.5rem;
+  main section.view3 .bottom .paragraph p {
+    font-size: 1.2rem;
   }
 }/*# sourceMappingURL=style.css.map */
