--- a/style.scss
+++ b/style.scss
@@ -29,11 +29,12 @@ body {
   gap: $gap;
 }
 body {
-  background-color: rgb(39, 38, 38);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: #1d1d1d;
 }
 html {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: rgb(244, 244, 244);
   font-size: clamp(14px, 1vw, 18px);
 }
 section {
@@ -45,7 +46,7 @@ main {
   width: 100%;
   align-items: center;
 
-  section {
+  section.view1 {
     width: 100%;
     @include flex-column(1rem);
     padding: 1rem;
@@ -54,15 +55,14 @@ main {
       width: 100%;
       img {
         width: 100%;
-        border-radius: 10px;
+        border-radius: 0.7rem;
       }
     }
     .bottom {
-      color: white;
       padding: 2rem 2rem;
       border-radius: 0.7rem;
       @include flex-column(3rem);
-      background-color: #1e1e1e;
+      background-color: #2a2a2a;
 
       p {
         font-size: 0.7rem;
@@ -71,8 +71,6 @@ main {
 
       .text {
         @include flex-column(1.3rem);
-
-        width: 100%;
 
         h1 {
           text-transform: uppercase;
@@ -104,77 +102,71 @@ main {
       }
     }
   }
-  .users {
-    flex-wrap: wrap;
-    padding: 2rem 2rem;
-    color: white;
+  section.view2 {
+    @include flex-column(2.5rem);
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    gap: 40px;
-    justify-content: space-between;
+    padding: 1rem;
 
-    .clients {
-      @include flex-column(0rem);
-      align-items: center;
-      h6 {
-        font-family: lo;
-        padding: 0rem 0.5rem;
-        text-transform: uppercase;
-        font-size: 1rem;
-        opacity: 0.5;
-      }
-      p {
-        font-family: ch;
-        font-size: 3.5rem;
+    .top,
+    .bottom {
+      width: 100%;
+      display: flex;
+      justify-content: space-around;
+
+      .element {
+        text-align: center;
+        @include flex-column(0.2rem);
+        h2 {
+          font-family: ch;
+          font-size: 3.5rem;
+          font-weight: 300;
+        }
+        small {
+          opacity: 0.5;
+          text-transform: uppercase;
+          font-size: 1rem;
+          font-family: sa;
+        }
       }
     }
-    .project {
-      // width: 40%;
+  }
+  section.view3 {
+    @include flex-column(1rem);
+    width: 100%;
+    padding: 1rem;
 
-      @include flex-column(0rem);
-      align-items: center;
-      h6 {
-        padding: 0rem 0.5rem;
-        text-transform: uppercase;
-        font-family: lo;
-        font-size: 1rem;
-        opacity: 0.5;
-      }
-      p {
-        font-family: ch;
-        font-size: 3.5rem;
+    .top {
+      width: 100%;
+      img {
+        width: 100%;
+        border-radius: 0.7rem;
       }
     }
-    .happy {
-      // width: 40%;
+    .bottom {
+      padding: 2rem 3rem;
+      border-radius: 0.7rem;
+      @include flex-column(3rem);
+      background-color: #2a2a2a;
 
-      @include flex-column(0rem);
-      align-items: center;
-      h6 {
-        font-family: lo;
-        text-transform: uppercase;
+      > p {
         font-size: 1rem;
-        opacity: 0.5;
-      }
-      p {
-        font-family: ch;
-        font-size: 3.5rem;
-      }
-    }
-    .follower {
-      @include flex-column(0rem);
-      align-items: center;
-      h6 {
-        padding: 0rem 0.5rem;
-        font-family: lo;
         text-transform: uppercase;
-        font-size: 1rem;
-        opacity: 0.5;
+        font-weight: 700;
       }
-      p {
-        font-family: ch;
-        font-size: 3.5rem;
+
+      .text {
+        @include flex-column(1rem);
+
+        h1 {
+          text-transform: uppercase;
+          font-size: 4rem;
+          font-weight: 400;
+        }
+        p {
+          font-size: 1.2rem;
+          opacity: 0.5;
+          font-weight: 200;
+        }
       }
     }
   }
@@ -182,8 +174,9 @@ main {
 
 @media (min-width: 900px) {
   main {
-    section {
+    section.view1 {
       flex-direction: row;
+      padding: 1rem 4rem;
       .top,
       .bottom {
         width: 50%;
@@ -196,13 +189,14 @@ main {
       }
       .bottom {
         justify-content: space-between;
-        padding: 3rem 3.7rem;
+        padding: 3rem;
 
-        p {
-          font-weight: 450;
+        > p {
+          font-weight: 650;
+          font-size: 1rem;
         }
         .text {
-          @include flex-column(1.5rem);
+          gap: 1.5rem;
           h1 {
             width: 80%;
             font-weight: 370;
@@ -211,51 +205,51 @@ main {
           }
 
           p {
-            line-height: 1.5;
+            line-height: 1.2;
             width: 90%;
-            font-size: 1.7rem;
+            font-weight: 300;
+            font-size: 1.5rem;
           }
         }
       }
     }
-    .users {
-      display: flex;
+    section.view2 {
       flex-direction: row;
-      padding: 3rem 5rem;
-      .clients {
-        h6 {
-          padding: 0rem;
-          font-weight: 300;
-        }
-        p {
-          font-size: 5.5rem;
-        }
-      }
-      .project {
-        h6 {
-          padding: 0rem;
-          font-weight: 300;
-        }
-        p {
-          font-size: 5.5rem;
+
+      padding: 3rem 4rem;
+
+      .top,
+      .bottom {
+        .element {
+          h2 {
+            font-size: 4.5rem;
+          }
         }
       }
-      .happy {
-        h6 {
-          padding: 0rem;
-          font-weight: 300;
-        }
-        p {
-          font-size: 5.5rem;
-        }
+    }
+    section.view3 {
+      flex-direction: row-reverse;
+
+      .top,
+      .bottom {
+        width: 50%;
       }
-      .follower {
-        h6 {
-          padding: 0rem;
-          font-weight: 300;
+      .bottom {
+        justify-content: space-between;
+        padding: 3rem;
+
+        h1 {
+          width: 80%;
         }
-        p {
-          font-size: 5.5rem;
+
+        .paragraph {
+          width: 100%;
+          display: flex;
+          gap: 2rem;
+
+          p {
+            font-size: 1.2rem;
+          }
         }
       }
     }
