--- a/style.css
+++ b/style.css
@@ -176,6 +176,48 @@ main section.view3 .bottom .text p {
   opacity: 0.5;
   font-weight: 200;
 }
+main section.view4 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  padding: 1rem;
+}
+main section.view4 .top {
+  width: 100%;
+}
+main section.view4 .top img {
+  width: 100%;
+  border-radius: 0.7rem;
+}
+main section.view4 .bottom {
+  padding: 2rem 3rem;
+  border-radius: 0.7rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  background-color: #2a2a2a;
+}
+main section.view4 .bottom > p {
+  text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: 700;
+}
+main section.view4 .bottom .text {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+main section.view4 .bottom .text h1 {
+  font-size: 4rem;
+  text-transform: uppercase;
+  font-weight: 400;
+}
+main section.view4 .bottom .text p {
+  font-size: 1.2rem;
+  opacity: 0.5;
+  font-weight: 200;
+}
 
 @media (min-width: 900px) {
   main section.view1 {
@@ -242,6 +284,31 @@ main section.view3 .bottom .text p {
     gap: 2rem;
   }
   main section.view3 .bottom .paragraph p {
+    font-size: 1.2rem;
+  }
+  main section.view4 {
+    flex-direction: row;
+  }
+  main section.view4 .top,
+  main section.view4 .bottom {
+    width: 50%;
+  }
+  main section.view4 .bottom {
+    padding: 3rem;
+    justify-content: space-between;
+  }
+  main section.view4 .bottom > p {
+    font-weight: 500;
+  }
+  main section.view4 .bottom h1 {
+    width: 80%;
+  }
+  main section.view4 .bottom .paragraph {
+    width: 100%;
+    display: flex;
+    gap: 2rem;
+  }
+  main section.view4 .bottom .paragraph p {
     font-size: 1.2rem;
   }
 }/*# sourceMappingURL=style.css.map */
