--- a/style.scss
+++ b/style.scss
@@ -170,6 +170,45 @@ main {
       }
     }
   }
+  section.view4 {
+    @include flex-column(1rem);
+    width: 100%;
+    padding: 1rem;
+
+    .top {
+      width: 100%;
+      img {
+        width: 100%;
+        border-radius: 0.7rem;
+      }
+    }
+    .bottom {
+      padding: 2rem 3rem;
+      border-radius: 0.7rem;
+      @include flex-column(3rem);
+      background-color: #2a2a2a;
+
+      > p {
+        text-transform: uppercase;
+        font-size: 1rem;
+        font-weight: 700;
+      }
+      .text {
+        @include flex-column(1rem);
+
+        h1 {
+          font-size: 4rem;
+          text-transform: uppercase;
+          font-weight: 400;
+        }
+        p {
+          font-size: 1.2rem;
+          opacity: 0.5;
+          font-weight: 200;
+        }
+      }
+    }
+  }
 }
 
 @media (min-width: 900px) {
@@ -242,6 +281,33 @@ main {
           width: 80%;
         }
 
+        .paragraph {
+          width: 100%;
+          display: flex;
+          gap: 2rem;
+
+          p {
+            font-size: 1.2rem;
+          }
+        }
+      }
+    }
+    section.view4 {
+      flex-direction: row;
+
+      .top,
+      .bottom {
+        width: 50%;
+      }
+      .bottom {
+        padding: 3rem;
+        justify-content: space-between;
+        > p {
+          font-weight: 500;
+        }
+        h1 {
+          width: 80%;
+        }
         .paragraph {
           width: 100%;
           display: flex;
