--- a/style.css
+++ b/style.css
@@ -218,6 +218,119 @@ main section.view4 .bottom .text p {
   opacity: 0.5;
   font-weight: 200;
 }
+main section.view5 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  padding: 1rem;
+}
+main section.view5 .teams {
+  align-items: center;
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+}
+main section.view5 .teams h2 {
+  font-size: 3rem;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+main section.view5 .teams a {
+  text-transform: uppercase;
+  font-size: 1.1rem;
+  font-weight: 400;
+  text-decoration: none;
+  color: white;
+}
+main section.view5 .teams a i {
+  padding: 0.2rem;
+  width: -moz-fit-content;
+  width: fit-content;
+  background-color: rgba(95, 93, 93, 0.431372549);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  border: 1px solid white;
+  border-radius: 50%;
+}
+main section.view6 {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  width: 100%;
+  display: flex;
+  gap: 2rem;
+  padding: 1rem;
+}
+main section.view6 .cards {
+  width: 100%;
+  background-image: url(https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d2ccbd7d003dfb6a1bdecb_team-01.webp);
+  background-size: cover;
+  aspect-ratio: 1/1;
+  border-radius: 0.7rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0rem;
+  justify-content: space-between;
+  padding: 1rem;
+}
+main section.view6 .cards .icons,
+main section.view6 .cards .bottom {
+  background-color: rgba(50, 50, 50, 0.407);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.385);
+  border-radius: 0.7rem;
+  padding: 0.6rem;
+}
+main section.view6 .cards .top {
+  display: flex;
+  gap: 1.3rem;
+  justify-content: flex-end;
+}
+main section.view6 .cards .icons {
+  padding: 0.8rem 0.9rem;
+  border: none;
+  border-radius: 50%;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+main section.view6 .cards .icons i {
+  font-size: 1.7rem;
+}
+main section.view6 .cards .bottom {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 1rem;
+}
+main section.view6 .cards .bottom p {
+  text-transform: uppercase;
+}
+main section.view6 .cards:nth-child(2) {
+  width: 100%;
+  background-image: url(https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d2ccbd2e12fa747e999689_team-02.webp);
+  background-size: cover;
+  aspect-ratio: 1/1;
+  border-radius: 0.7rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0rem;
+  justify-content: space-between;
+  padding: 1rem;
+}
+main section.view6 .cards:nth-child(3) {
+  width: 100%;
+  background-image: url(https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d2ccbdc1f945f817bf4fd7_team-03.webp);
+  background-size: cover;
+  aspect-ratio: 1/1;
+  border-radius: 0.7rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0rem;
+  justify-content: space-between;
+  padding: 1rem;
+}
 
 @media (min-width: 900px) {
   main section.view1 {
@@ -310,5 +423,13 @@ main section.view4 .bottom .text p {
   }
   main section.view4 .bottom .paragraph p {
     font-size: 1.2rem;
+  }
+  main section.view5 {
+    width: 100%;
+    padding: 0rem 3rem;
+  }
+  main section.view6 {
+    flex-direction: row;
+    padding: 1rem 3rem;
   }
 }/*# sourceMappingURL=style.css.map */
