--- a/style.scss
+++ b/style.scss
@@ -209,6 +209,112 @@ main {
       }
     }
   }
+  section.view5 {
+    @include flex-column(1rem);
+    width: 100%;
+    padding: 1rem;
+
+    .teams {
+      align-items: center;
+      width: 100%;
+      padding: 1rem;
+      display: flex;
+      justify-content: space-between;
+
+      h2 {
+        font-size: 3rem;
+        font-weight: 400;
+        text-transform: uppercase;
+      }
+      a {
+        text-transform: uppercase;
+        font-size: 1.1rem;
+        font-weight: 400;
+        text-decoration: none;
+        color: white;
+
+        i {
+          padding: 0.2rem;
+          width: fit-content;
+          background-color: #5f5d5d6e;
+          backdrop-filter: blur(5px);
+          border: 1px solid white;
+          border-radius: 50%;
+        }
+      }
+    }
+  }
+  section.view6 {
+    @include flex-column(2rem);
+    width: 100%;
+    display: flex;
+    gap: 2rem;
+    padding: 1rem;
+
+    .cards {
+      width: 100%;
+      background-image: url(https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d2ccbd7d003dfb6a1bdecb_team-01.webp);
+      background-size: cover;
+      aspect-ratio: 1/1;
+      border-radius: 0.7rem;
+      @include flex-column(0rem);
+      justify-content: space-between;
+      padding: 1rem;
+
+      .icons,
+      .bottom {
+        background-color: rgba(50, 50, 50, 0.407);
+        backdrop-filter: blur(5px);
+        border: 1px solid rgba(255, 255, 255, 0.385);
+        border-radius: 0.7rem;
+        padding: 0.6rem;
+      }
+      .top {
+        display: flex;
+        gap: 1.3rem;
+        justify-content: flex-end;
+      }
+      .icons {
+        padding: 0.8rem 0.9rem;
+        border: none;
+        border-radius: 50%;
+        width: fit-content;
+
+        i {
+          font-size: 1.7rem;
+        }
+      }
+      .bottom {
+        display: flex;
+        justify-content: space-between;
+        padding: 1rem 1rem;
+
+        p {
+          text-transform: uppercase;
+        }
+      }
+    }
+    .cards:nth-child(2) {
+      width: 100%;
+      background-image: url(https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d2ccbd2e12fa747e999689_team-02.webp);
+      background-size: cover;
+      aspect-ratio: 1/1;
+      border-radius: 0.7rem;
+      @include flex-column(0rem);
+      justify-content: space-between;
+      padding: 1rem;
+    }
+    .cards:nth-child(3) {
+      width: 100%;
+      background-image: url(https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d2ccbdc1f945f817bf4fd7_team-03.webp);
+      background-size: cover;
+      aspect-ratio: 1/1;
+      border-radius: 0.7rem;
+      @include flex-column(0rem);
+      justify-content: space-between;
+      padding: 1rem;
+    }
+  }
 }
 
 @media (min-width: 900px) {
@@ -318,6 +424,14 @@ main {
           }
         }
       }
+    }
+    section.view5 {
+      width: 100%;
+      padding: 0rem 3rem;
+    }
+    section.view6 {
+      flex-direction: row;
+      padding: 1rem 3rem;
     }
   }
 }
