--- a/style.css
+++ b/style.css
@@ -331,6 +331,59 @@ main section.view6 .cards:nth-child(3) {
   justify-content: space-between;
   padding: 1rem;
 }
+main section.view7 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  padding: 1rem;
+}
+main section.view7 .top {
+  width: 100%;
+}
+main section.view7 .top img {
+  border-radius: 0.7rem;
+  width: 100%;
+}
+main section.view7 .bottom {
+  padding: 2rem 3rem;
+  border-radius: 0.7rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  background-color: #2a2a2a;
+}
+main section.view7 .bottom > p {
+  text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: 700;
+}
+main section.view7 .bottom .text {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+main section.view7 .bottom .text h1 {
+  text-transform: uppercase;
+  font-size: 4rem;
+  font-weight: 400;
+}
+main section.view7 .bottom .text a {
+  text-transform: uppercase;
+  text-decoration: none;
+  color: white;
+  font-size: 1.5rem;
+}
+main section.view7 .bottom .text a i {
+  background-color: rgba(47, 46, 46, 0.5019607843);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  border: 1px solid white;
+  width: -moz-fit-content;
+  width: fit-content;
+  border-radius: 50%;
+  padding: 0.9rem;
+}
 
 @media (min-width: 900px) {
   main section.view1 {
@@ -437,5 +490,23 @@ main section.view6 .cards:nth-child(3) {
   main section.view6 {
     flex-direction: row;
     padding: 1rem 3rem;
+  }
+  main section.view7 {
+    flex-direction: row;
+    padding: 2rem;
+  }
+  main section.view7 .top,
+  main section.view7 .bottom {
+    width: 50%;
+  }
+  main section.view7 .bottom {
+    padding: 3rem 4rem;
+    justify-content: space-between;
+  }
+  main section.view7 .bottom p {
+    font-weight: 500;
+  }
+  main section.view7 .bottom .text a {
+    font-size: 1.1rem;
   }
 }/*# sourceMappingURL=style.css.map */
