--- a/style.scss
+++ b/style.scss
@@ -315,6 +315,55 @@ main {
       padding: 1rem;
     }
   }
+  section.view7 {
+    @include flex-column(1rem);
+    width: 100%;
+    padding: 1rem;
+
+    .top {
+      width: 100%;
+
+      img {
+        border-radius: 0.7rem;
+        width: 100%;
+      }
+    }
+    .bottom {
+      padding: 2rem 3rem;
+      border-radius: 0.7rem;
+      @include flex-column(3rem);
+      background-color: #2a2a2a;
+      > p {
+        text-transform: uppercase;
+        font-size: 1rem;
+        font-weight: 700;
+      }
+
+      .text {
+        @include flex-column(3rem);
+        h1 {
+          text-transform: uppercase;
+          font-size: 4rem;
+          font-weight: 400;
+        }
+        a {
+          text-transform: uppercase;
+          text-decoration: none;
+          color: white;
+          font-size: 1.5rem;
+
+          i {
+            background-color: #2f2e2e80;
+            backdrop-filter: blur(5px);
+            border: 1px solid white;
+            width: fit-content;
+            border-radius: 50%;
+            padding: 0.9rem;
+          }
+        }
+      }
+    }
+  }
 }
 
 @media (min-width: 900px) {
@@ -438,6 +487,28 @@ main {
     section.view6 {
       flex-direction: row;
       padding: 1rem 3rem;
+    }
+    section.view7 {
+      flex-direction: row;
+      padding: 2rem;
+
+      .top,
+      .bottom {
+        width: 50%;
+      }
+      .bottom {
+        padding: 3rem 4rem;
+        justify-content: space-between;
+
+        p {
+          font-weight: 500;
+        }
+        .text {
+          a {
+            font-size: 1.1rem;
+          }
+        }
+      }
     }
   }
 }
