--- a/style.scss
+++ b/style.scss
@@ -364,6 +364,52 @@ main {
       }
     }
   }
+  section.view8 {
+    @include flex-column(1rem);
+    width: 100%;
+    padding: 1rem 2rem;
+
+    .contact {
+      @include flex-column(1rem);
+      width: 100%;
+      padding: 2rem;
+      border-radius: 0.7rem;
+      background-color: #cebd63;
+
+      p {
+        font-size: 1.5rem;
+        opacity: 0.7;
+        color: #000;
+        text-transform: uppercase;
+      }
+      .text {
+        @include flex-column(1rem);
+
+        h1 {
+          font-family: ch;
+          color: #000;
+          font-size: 4.5rem;
+          line-height: 1;
+          font-weight: 360;
+          text-transform: uppercase;
+        }
+        a {
+          width: fit-content;
+
+          text-transform: uppercase;
+          font-size: 1.2rem;
+          letter-spacing: 3px;
+          text-align: center;
+          padding: 1.5rem;
+          border-radius: 1rem;
+          text-decoration: none;
+          color: rgba(255, 255, 255, 0.546);
+          background-color: #000;
+          font-weight: 500;
+        }
+      }
+    }
+  }
 }
 
 @media (min-width: 900px) {
@@ -506,6 +552,29 @@ main {
         .text {
           a {
             font-size: 1.1rem;
+          }
+        }
+      }
+    }
+    section.view8 {
+      @include flex-column(1rem);
+
+      .contact {
+        display: flex;
+        padding-left: 5rem;
+
+        p {
+          font-size: 0.9rem;
+        }
+        .text {
+          h1 {
+            opacity: 0.8;
+            font-size: 5rem;
+            display: inline-block;
+            width: 65%;
+          }
+          a {
+            margin-left: 70rem;
           }
         }
       }
