--- a/style.css
+++ b/style.css
@@ -384,6 +384,55 @@ main section.view7 .bottom .text a i {
   border-radius: 50%;
   padding: 0.9rem;
 }
+main section.view8 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  padding: 1rem 2rem;
+}
+main section.view8 .contact {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  padding: 2rem;
+  border-radius: 0.7rem;
+  background-color: #cebd63;
+}
+main section.view8 .contact p {
+  font-size: 1.5rem;
+  opacity: 0.7;
+  color: #000;
+  text-transform: uppercase;
+}
+main section.view8 .contact .text {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+main section.view8 .contact .text h1 {
+  font-family: ch;
+  color: #000;
+  font-size: 4.5rem;
+  line-height: 1;
+  font-weight: 360;
+  text-transform: uppercase;
+}
+main section.view8 .contact .text a {
+  width: -moz-fit-content;
+  width: fit-content;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  letter-spacing: 3px;
+  text-align: center;
+  padding: 1.5rem;
+  border-radius: 1rem;
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.546);
+  background-color: #000;
+  font-weight: 500;
+}
 
 @media (min-width: 900px) {
   main section.view1 {
@@ -508,5 +557,26 @@ main section.view7 .bottom .text a i {
   }
   main section.view7 .bottom .text a {
     font-size: 1.1rem;
+  }
+  main section.view8 {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  main section.view8 .contact {
+    display: flex;
+    padding-left: 5rem;
+  }
+  main section.view8 .contact p {
+    font-size: 0.9rem;
+  }
+  main section.view8 .contact .text h1 {
+    opacity: 0.8;
+    font-size: 5rem;
+    display: inline-block;
+    width: 65%;
+  }
+  main section.view8 .contact .text a {
+    margin-left: 70rem;
   }
 }/*# sourceMappingURL=style.css.map */
